<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewGeoQuizTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="198dp"
        android:background="#009999"
        android:gravity="center|start"
        android:padding="20dp"
        android:text="@string/GeoQuiz"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewQuestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="414dp"
        android:text="@string/Questions"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGeoQuizTop" />

    <Button
        android:id="@+id/buttonTRUE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/TRUE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGeoQuizTop"
        app:layout_constraintVertical_bias="0.453" />

    <Button
        android:id="@+id/buttonFALSE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="@string/FALSE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGeoQuizTop"
        app:layout_constraintVertical_bias="0.453"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonCHEAT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CHEAT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGeoQuizTop"
        app:layout_constraintVertical_bias="0.578"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonPREV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="184dp"
        android:text="@string/PREV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonNEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="184dp"
        android:text="@string/NEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>